tests/parse-errors/types/legacy_struct_attribute_syntax.cx
struct Data nocopy {
    int value;
};

int main() {
    return 0;
}
